fix tile image vertical align

--- a/src/adhocracy/static_src/stylesheets/components/_tile.scss
+++ b/src/adhocracy/static_src/stylesheets/components/_tile.scss
@@ -58,4 +58,5 @@ a.tile {
 .tile-image {
     width: 100%;
     border-bottom: 2px solid $primary-color;
+    vertical-align: bottom;
 }
